--- a/index.html
+++ b/index.html
@@ -45,14 +45,14 @@
                     </h1>
                     <div class="subheading mb-5">
                         11022 David Stone Dr · Chapel Hill, NC 27517 · (651) 402-2122 ·
-                        <a href="mailto:name@email.com">name@email.com</a>
+                        <a href="mailto:m.nickrogers@email.com">m.nickrogers@email.com</a>
                     </div>
-                    <p class="lead mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
+                    <p class="lead mb-5"></p>
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
+                        <!a class="social-icon" href="#"><i class="fab fa-twitter"></i></a>
+                        <!a class="social-icon" href="#"><i class="fab fa-facebook-f"></i></a>
                     </div>
                 </div>
             </section>
