--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
                         11022 David Stone Dr · Chapel Hill, NC 27517 · (651) 402-2122 ·
                         <a href="mailto:m.nickrogers@email.com">m.nickrogers@email.com</a>
                     </div>
-                    <p class="lead mb-5"></p>
+                    <p class="lead mb-5">I am a mechanical engineer currently working in design and new product development. Besides engineering, I love working with data, improving processes, and using Python to help my team be more successful.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
