--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                     </div>
                     <p class="lead mb-5">I am a mechanical engineer currently working in design and new product development. Besides engineering, I love working with data, improving processes, and using Python to help my team be more successful.</p>
                     <div class="social-icons">
-                        <a class="social-icon" href="#"><i class="fab fa-linkedin-in"></i></a>
+                        <a class="social-icon" href="https://www.linkedin.com/in/nickrogersme/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
                         <!a class="social-icon" href="#"><!i class="fab fa-twitter"></i></a>
                         <!a class="social-icon" href="#"><!i class="fab fa-facebook-f"></i></a>
@@ -102,20 +102,20 @@
                     <h2 class="mb-5">Education</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">University of Colorado Boulder</h3>
+                            <h3 class="mb-0">Iowa State University</h3>
                             <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Computer Science - Web Development Track</div>
-                            <p>GPA: 3.23</p>
+                            <div>Major: Mechanical Engineering</div>
+                            <div>Minor: Astronomy</div>
+                            <p>GPA: 3.85</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2006 - May 2010</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2014 - December 2016</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">James Buchanan High School</h3>
-                            <div class="subheading mb-3">Technology Magnet Program</div>
-                            <p>GPA: 3.56</p>
+                            <h3 class="mb-0">Valley High School</h3>
+                            <p>GPA: 3.64</p>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2002 - May 2006</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2004 - June 2008</span></div>
                     </div>
                 </div>
             </section>
