--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
                     <p class="lead mb-5">I am a mechanical engineer currently working in design and new product development. Besides engineering, I love working with data, improving processes, and using Python to help my team be more successful.</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/nickrogersme/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="#"><i class="fab fa-github"></i></a>
+                        <a class="social-icon" href="https://github.com/njrogers/"><i class="fab fa-github"></i></a>
                         <!a class="social-icon" href="#"><!i class="fab fa-twitter"></i></a>
                         <!a class="social-icon" href="#"><!i class="fab fa-facebook-f"></i></a>
                     </div>
