--- a/index.html
+++ b/index.html
@@ -106,14 +106,21 @@
                             <div class="subheading mb-3">Bachelor of Science</div>
                             <div>Major: Mechanical Engineering</div>
                             <div>Minor: Astronomy</div>
-                            <p>GPA: 3.85</p>
+                            <p>Magna cum laude</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2014 - December 2016</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Century College</h3>
+                            <div class="subheading mb-3">Associate of Arts</div>
+                            <div>Major: Business Management</div>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">August 2008 - December 2011</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Valley High School</h3>
-                            <p>GPA: 3.64</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2004 - June 2008</span></div>
                     </div>
