--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
                             <div class="subheading mb-3">Bachelor of Science</div>
                             <div>Major: Mechanical Engineering</div>
                             <div>Minor: Astronomy</div>
-                            <p>Magna cum laude</p>
+                            <div>GPA: 3.85</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2014 - December 2016</span></div>
                     </div>
@@ -114,7 +114,6 @@
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Century College</h3>
                             <div class="subheading mb-3">Associate of Arts</div>
-                            <div>Major: Business Management</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2008 - December 2011</span></div>
                     </div>
