--- a/index.html
+++ b/index.html
@@ -120,6 +120,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Valley High School</h3>
+                            <div class="subheading mb-3">High school diploma</div>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2004 - June 2008</span></div>
                     </div>
