--- a/index.html
+++ b/index.html
@@ -1,188 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <meta charset="utf-8" />
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
-        <meta name="description" content="" />
-        <meta name="author" content="" />
-        <title>Nick Rogers</title>
-        <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
-        <!-- Font Awesome icons (free version)-->
-        <script src="https://use.fontawesome.com/releases/v5.13.0/js/all.js" crossorigin="anonymous"></script>
-        <!-- Google fonts-->
-        <link href="https://fonts.googleapis.com/css?family=Saira+Extra+Condensed:500,700" rel="stylesheet" type="text/css" />
-        <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,800,800i" rel="stylesheet" type="text/css" />
-        <!-- Core theme CSS (includes Bootstrap)-->
-        <link href="css/styles.css" rel="stylesheet" />
-    </head>
-    <body id="page-top">
-        <!-- Navigation-->
-        <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
-            <a class="navbar-brand js-scroll-trigger" href="#page-top">
-                <span class="d-block d-lg-none">Nick Rogers</span>
-                <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.png" alt="" /></span>
-            </a>
-            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-            <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav">
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
-                </ul>
-            </div>
-        </nav>
-        <!-- Page Content-->
-        <div class="container-fluid p-0">
-            <!-- About-->
-            <section class="resume-section" id="about">
-                <div class="resume-section-content">
-                    <h1 class="mb-0">
-                        Nick
-                        <span class="text-primary">Rogers</span>
-                    </h1>
-                    <div class="subheading mb-5">
-                        11022 David Stone Dr · Chapel Hill, NC 27517 · (651) 402-2122 ·
-                        <a href="mailto:m.nickrogers@email.com">m.nickrogers@email.com</a>
-                    </div>
-                    <p class="lead mb-5">I am a mechanical engineer currently working in design and new product development. Besides engineering, I love working with data, improving processes, and using Python to help my team be more successful.</p>
-                    <div class="social-icons">
-                        <a class="social-icon" href="https://www.linkedin.com/in/nickrogersme/"><i class="fab fa-linkedin-in"></i></a>
-                        <a class="social-icon" href="https://github.com/njrogers/"><i class="fab fa-github"></i></a>
-                        <!a class="social-icon" href="#"><!i class="fab fa-twitter"></i></a>
-                        <!a class="social-icon" href="#"><!i class="fab fa-facebook-f"></i></a>
-                    </div>
-                </div>
-            </section>
-            <hr class="m-0" />
-            <!-- Experience-->
-            <section class="resume-section" id="experience">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Experience</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Data and Cost Estimating Specialist</h3>
-                            <div class="subheading mb-3">Crenlo Engineered Cabs</div>
-                            <p>Description.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">April 2020 - Present</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Mechanical Engineer</h3>
-                            <div class="subheading mb-3">Crenlo Engineered Cabs</div>
-                            <p>Description.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2017 - April 2020</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Mechanical Engineer</h3>
-                            <div class="subheading mb-3">RFA Engineering onsite at John Deere</div>
-                            <p>Description.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">September 2017 - September 2018</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Operations Manager</h3>
-                            <div class="subheading mb-3">FedEx Ground</div>
-                            <p>Description.</p>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2008 - August 2014</span></div>
-                    </div>
-                </div>
-            </section>
-            <hr class="m-0" />
-            <!-- Education-->
-            <section class="resume-section" id="education">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Education</h2>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Iowa State University</h3>
-                            <div class="subheading mb-3">Bachelor of Science</div>
-                            <div>Major: Mechanical Engineering</div>
-                            <div>Minor: Astronomy</div>
-                            <div>GPA: 3.85</div>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2014 - December 2016</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Century College</h3>
-                            <div class="subheading mb-3">Associate of Arts</div>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2008 - December 2011</span></div>
-                    </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
-                        <div class="flex-grow-1">
-                            <h3 class="mb-0">Valley High School</h3>
-                            <div class="subheading mb-3">High school diploma</div>
-                        </div>
-                        <div class="flex-shrink-0"><span class="text-primary">August 2004 - June 2008</span></div>
-                    </div>
-                </div>
-            </section>
-            <hr class="m-0" />
-            <!-- Skills-->
-            <section class="resume-section" id="skills">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Skills</h2>
-                    <div class="subheading mb-3">Programming Languages & Tools</div>
-                    <ul class="list-inline dev-icons">
-                        <!li class="list-inline-item"><!i class="fab fa-html5"></i></li>
-                        <!li class="list-inline-item"><!i class="fab fa-css3-alt"></i></li>
-                        <!li class="list-inline-item"><!i class="fab fa-js-square"></i></li>
-                        <!li class="list-inline-item"><!i class="fab fa-angular"></i></li>
-                        <!li class="list-inline-item"><!i class="fab fa-react"></i></li>
-                        <!li class="list-inline-item"><!i class="fab fa-node-js"></i></li>
-                        <!li class="list-inline-item"><!i class="fab fa-sass"></i></li>
-                        <!li class="list-inline-item"><!i class="fab fa-less"></i></li>
-                        <!li class="list-inline-item"><!i class="fab fa-wordpress"></i></li>
-                        <!li class="list-inline-item"><!i class="fab fa-gulp"></i></li>
-                        <!li class="list-inline-item"><!i class="fab fa-grunt"></i></li>
-                        <!li class="list-inline-item"><!i class="fab fa-npm"></i></li>
-                    </ul>
-                    <div class="subheading mb-3">Workflow</div>
-                    <ul class="fa-ul mb-0">
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Mechanical Engineering
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Python
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Data Analysis
-                        </li>
-                        <li>
-                            <span class="fa-li"><i class="fas fa-check"></i></span>
-                            Communication
-                        </li>
-                    </ul>
-                </div>
-            </section>
-            <hr class="m-0" />
-            <!-- Interests-->
-            <section class="resume-section" id="interests">
-                <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
-                    <p>I like data.</p>
-                    <p class="mb-0">I like my family.</p>
-                </div>
-            </section>
-            <hr class="m-0" />
-        </div>
-        <!-- Bootstrap core JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
-        <!-- Third party plugin JS-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-        <!-- Core theme JS-->
-        <script src="js/scripts.js"></script>
-    </body>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Your Streamlit App</title>
+</head>
+<body>
+    <h1>Welcome to My Website</h1>
+    <iframe src="https://blank-app-3nbgqtqugma.streamlit.app/" width="100%" height="800px" frameborder="0"></iframe>
+</body>
 </html>
