--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Welcome to My Website</h1>
-    <iframe src="https://blank-app-3nbgqtqugma.streamlit.app/" width="100%" height="800px" frameborder="0"></iframe>
+    <iframe src="https://blank-app-3nbgqtqugma.streamlit.app/?embedded=true" width="100%" height="800px" frameborder="0"></iframe>
 </body>
 </html>
